<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityes.ShowNote"
    android:orientation="vertical"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewShowNoteTitle"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_weight="20"
        tools:text="Titlle"
        />

    <EditText
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="8dp"
        android:layout_weight="70"
        android:id="@+id/textViewShowNote"
        android:layout_width="match_parent"
        android:layout_height="472dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewShowNoteTitle"
        android:gravity="top|left"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="10"
        android:layout_marginBottom="5dp"
        >
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/Save_ChangeShowActBtn"
            android:text="@string/change"

            />
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/Delete_ChangeShowActBtn"
            android:text="@string/delete"

            />
        <Button
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/Setting_ChangeShowActBtn"
            android:text="@string/setting"

            />

    </LinearLayout>


    </LinearLayout>